2010-01-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Move the code for creating a new task into create_task().
   Strip the token from the displayed task description to be closer
   to the initial implementation (closes #2925003).
   Add a new column to the tasks list showing the used type (keyword).


2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/*.c, src/*.h:
   Update copyright information.
 * src/ao_bookmarklist.c:
   Fix warning if the bookmark list is disabled.
 * src/ao_tasks.c:
   Implement a Delete menu item for the tasks list popup menu to easily
   delete tasks (closes #2911105).
   List tasks only once per line even if there were more than
   one matching token.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Add an option to define whether all open documents or only the
   current document should be scanned for tasks (closes #2911086).


2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_openuri.c:
   Remove trailing dots and colons from URIs.


2009-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Enable basic sorting of the columns.
   Make the columns resizable.


2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Add a simple popup menu to update the Tasks list and hide
   the Messages window.
 * src/addons.c, src/ao_tasks.c:
   Update the tasks list on startup only first the main window has been
   realized, i.e. Geany has finished the startup process.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Update the task list only for changed documents and on document
   closing, simply delete matching TODO tasks instead of updating all.
   This is major speed up of the whole tasks processing.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Add a property to the AoTasks class to prepare configurable
   tasks tokens.
   Make the search tokens for the Task list fully configurable