@@ -24,6 +24,7 @@
 
 #include "geanyplugin.h"
 
+#include "ao_blanklines.h"
 #include "ao_doclist.h"
 #include "ao_openuri.h"
 #include "ao_systray.h"
@@ -40,7 +41,7 @@ GeanyFunctions	*geany_functions;
 
 PLUGIN_VERSION_CHECK(165)
 PLUGIN_SET_INFO(_("Addons"), _("Various small addons for Geany."), VERSION,
-	"Enrico Tröger, Bert Vermeulen")
+	"Enrico Tröger, Bert Vermeulen, Eugene Arshinov")
 
 
 /* Keybinding(s) */
@@ -64,6 +65,7 @@ typedef struct
 	gboolean enable_systray;
 	gboolean enable_bookmarklist;
 	gboolean enable_markword;
+	gboolean strip_trailing_blank_lines;
 
 	gchar *tasks_token_list;
 	gboolean tasks_scan_all_documents;
@@ -85,6 +87,7 @@ static void ao_update_editor_menu_cb(GObject *obj, const gchar *word, gint pos,
 static void ao_document_activate_cb(GObject *obj, GeanyDocument *doc, gpointer data);
 static void ao_document_open_cb(GObject *obj, GeanyDocument *doc, gpointer data);
 static void ao_document_save_cb(GObject *obj, GeanyDocument *doc, gpointer data);
+static void ao_document_before_save_cb(GObject *obj, GeanyDocument *doc, gpointer data);
 static void ao_document_close_cb(GObject *obj, GeanyDocument *doc, gpointer data);
 gboolean ao_editor_notify_cb(GObject *object, GeanyEditor *editor,
 	SCNotification *nt, gpointer data);
@@ -92,13 +95,14 @@ gboolean ao_editor_notify_cb(GObject *object, GeanyEditor *editor,
 
 PluginCallback plugin_callbacks[] =
 {
-    { "update-editor-menu", (GCallback) &ao_update_editor_menu_cb, FALSE, NULL },
-
+	{ "update-editor-menu", (GCallback) &ao_update_editor_menu_cb, FALSE, NULL },
 	{ "editor-notify", (GCallback) &ao_editor_notify_cb, TRUE, NULL },
+
 	{ "document-open", (GCallback) &ao_document_open_cb, TRUE, NULL },
 	{ "document-save", (GCallback) &ao_document_save_cb, TRUE, NULL },
 	{ "document-close", (GCallback) &ao_document_close_cb, TRUE, NULL },
 	{ "document-activate", (GCallback) &ao_document_activate_cb, TRUE, NULL },
+	{ "document-before-save", (GCallback) &ao_document_before_save_cb, TRUE, NULL },
 
 	{ NULL, NULL, FALSE, NULL }
 };
@@ -174,6 +178,14 @@ static void ao_document_save_cb(GObject *obj, GeanyDocument *doc, gpointer data)
 }
 
 
+static void ao_document_before_save_cb(GObject *obj, GeanyDocument *doc, gpointer data)
+{
+	g_return_if_fail(doc != NULL && doc->is_valid);
+
+	ao_blanklines_on_document_before_save(obj, doc, data);
+}
+
+
 GtkWidget *ao_image_menu_item_new(const gchar *stock_id, const gchar *label)
 {
 	GtkWidget *item = gtk_image_menu_item_new_with_label(label);
@@ -212,6 +224,8 @@ void plugin_init(GeanyData *data)
 		"addons", "enable_bookmarklist", FALSE);
 	ao_info->enable_markword = utils_get_setting_boolean(config,
 		"addons", "enable_markword", FALSE);
+	ao_info->strip_trailing_blank_lines = utils_get_setting_boolean(config,
+		"addons", "strip_trailing_blank_lines", FALSE);
 
 	main_locale_init(LOCALEDIR, GETTEXT_PACKAGE);
 	plugin_module_make_resident(geany_plugin);
@@ -223,6 +237,8 @@ void plugin_init(GeanyData *data)
 	ao_info->markword = ao_mark_word_new(ao_info->enable_markword);
 	ao_info->tasks = ao_tasks_new(ao_info->enable_tasks,
 						ao_info->tasks_token_list, ao_info->tasks_scan_all_documents);
+
+	ao_blanklines_set_enable(ao_info->strip_trailing_blank_lines);
 
 	/* setup keybindings */
 	key_group = plugin_set_key_group(geany_plugin, "addons", KB_COUNT, NULL);
@@ -269,6 +285,8 @@ static void ao_configure_response_cb(GtkDialog *dialog, gint response, gpointer 
 			g_object_get_data(G_OBJECT(dialog), "check_bookmarklist"))));
 		ao_info->enable_markword = (gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(
 			g_object_get_data(G_OBJECT(dialog), "check_markword"))));
+		ao_info->strip_trailing_blank_lines = (gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(
+			g_object_get_data(G_OBJECT(dialog), "check_blanklines"))));
 
 		g_key_file_load_from_file(config, ao_info->config_file, G_KEY_FILE_NONE, NULL);
 		g_key_file_set_boolean(config, "addons",
@@ -282,6 +300,8 @@ static void ao_configure_response_cb(GtkDialog *dialog, gint response, gpointer 
 		g_key_file_set_boolean(config, "addons", "enable_bookmarklist",
 			ao_info->enable_bookmarklist);
 		g_key_file_set_boolean(config, "addons", "enable_markword", ao_info->enable_markword);
+		g_key_file_set_boolean(config, "addons", "strip_trailing_blank_lines",
+		  ao_info->strip_trailing_blank_lines);
 
 		g_object_set(ao_info->doclist, "enable-doclist", ao_info->show_toolbar_doclist_item, NULL);
 		g_object_set(ao_info->openuri, "enable-openuri", ao_info->enable_openuri, NULL);
@@ -294,6 +314,7 @@ static void ao_configure_response_cb(GtkDialog *dialog, gint response, gpointer 
 			"scan-all-documents", ao_info->tasks_scan_all_documents,
 			"tokens", ao_info->tasks_token_list,
 			NULL);
+		ao_blanklines_set_enable(ao_info->strip_trailing_blank_lines);
 
 		if (! g_file_test(config_dir, G_FILE_TEST_IS_DIR) && utils_mkdir(config_dir, TRUE) != 0)
 		{
@@ -318,6 +339,7 @@ GtkWidget *plugin_configure(GtkDialog *dialog)
 	GtkWidget *vbox, *check_doclist, *check_openuri, *check_tasks, *check_systray;
 	GtkWidget *check_bookmarklist, *check_markword, *frame_tasks, *vbox_tasks;
 	GtkWidget *check_tasks_scan_mode, *entry_tasks_tokens, *label_tasks_tokens, *tokens_hbox;
+	GtkWidget *check_blanklines;
 
 	vbox = gtk_vbox_new(FALSE, 6);
 
@@ -388,6 +410,12 @@ GtkWidget *plugin_configure(GtkDialog *dialog)
 		ao_info->enable_markword);
 	gtk_box_pack_start(GTK_BOX(vbox), check_markword, FALSE, FALSE, 3);
 
+	check_blanklines = gtk_check_button_new_with_label(
+		_("Strip trailing blank lines"));
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(check_blanklines),
+		ao_info->strip_trailing_blank_lines);
+	gtk_box_pack_start(GTK_BOX(vbox), check_blanklines, FALSE, FALSE, 3);
+
 	g_object_set_data(G_OBJECT(dialog), "check_doclist", check_doclist);
 	g_object_set_data(G_OBJECT(dialog), "check_openuri", check_openuri);
 	g_object_set_data(G_OBJECT(dialog), "check_tasks", check_tasks);
@@ -396,6 +424,7 @@ GtkWidget *plugin_configure(GtkDialog *dialog)
 	g_object_set_data(G_OBJECT(dialog), "check_systray", check_systray);
 	g_object_set_data(G_OBJECT(dialog), "check_bookmarklist", check_bookmarklist);
 	g_object_set_data(G_OBJECT(dialog), "check_markword", check_markword);
+	g_object_set_data(G_OBJECT(dialog), "check_blanklines", check_blanklines);
 	g_signal_connect(dialog, "response", G_CALLBACK(ao_configure_response_cb), NULL);
 
 	ao_configure_tasks_toggled_cb(GTK_TOGGLE_BUTTON(check_tasks), dialog);
@@ -419,6 +448,8 @@ void plugin_cleanup(void)
 	g_object_unref(ao_info->markword);
 	g_object_unref(ao_info->tasks);
 	g_free(ao_info->tasks_token_list);
+
+	ao_blanklines_set_enable(FALSE);
 
 	g_free(ao_info->config_file);
 	g_free(ao_info);
