@@ -8,6 +8,7 @@ addons/src/addons.c
 addons/src/ao_doclist.c
 addons/src/ao_bookmarklist.c
 addons/src/ao_markword.c
+addons/src/ao_blanklines.c
 
 #codenav
 codenav/src/codenavigation.c
