@@ -1,3 +1,11 @@
+2010-01-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * AUTHORS, README, src/ao_blanklines.c, src/ao_blanklines.h,
+   src/Makefile.am, src/addons.c:
+   Add new addon 'Strip trailing blank lines' by Eugene Arshinov,
+   thanks.
+
+
 2010-01-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/ao_tasks.c:
